--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="https://i.ibb.co/DzVsfxx/todo-list-removebg-preview.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo-list</title>
+    <title>Set Priority</title>
   </head>
   <body>
     <div id="root"></div>
